[package]
name = "pallet-repository"
description = "blockchain building blocks based on Polkadot and the Substrate framework."
license = "GPL-3.0-only"
rust-version = "1.64.0" # workspace properties
readme = "README.md"
authors.workspace = true
edition.workspace = true
version.workspace = true

[workspace.package]
authors = ["Jingnan Zhou"]
edition = "2021"
repository = "https://github.com/iservicebus/pallet-repository.git"
version = "0.9.37"

[[bin]]
name = "pallet_repository"
path = "src/main.rs"



[workspace]
members = [

    "templates/relay-mvp/node/cli",
    "templates/relay-mvp/node/client",
    "templates/relay-mvp/node/service",

    "templates/relay-mvp/chains/westend/runtime",
    "templates/relay-mvp/chains/westend/chain-spec",

    "templates/relay-mvp/chain-config",


    "templates/para-mvp/node",
    "templates/para-mvp/runtime",
  


    "templates/solo-poc/node",
    "templates/solo-poc/runtime",



    "templates/solo-mvp/node/cli",
    "templates/solo-mvp/node/executor",
    "templates/solo-mvp/node/inspect",
    "templates/solo-mvp/node/primitives",
    "templates/solo-mvp/node/rpc",
    "templates/solo-mvp/node/testing",
    "templates/solo-mvp/runtime",

    "pallets/template",

]
[profile.release]
# Polkadot runtime requires unwinding.
panic = "unwind"
opt-level = 3

