[package]
name = "relay-mvp-chain-config"
rust-version = "1.60"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
# westend chain
westend-chain-runtime = { path = "../chains/westend/runtime" , optional = true}
westend-chain-spec = { path = "../chains/westend/chain-spec" , optional = true}
westend-chain-runtime-constants = { path = "../chains/westend/runtime/constants", optional = true }

[features]
default = ["westend-chain-runtime", "westend-chain-spec", "westend-chain-runtime-constants" ]

runtime-metrics = ["westend-chain-runtime/runtime-metrics"]
try-runtime = ["westend-chain-runtime/try-runtime"]
runtime-benchmarks = ["westend-chain-runtime/runtime-benchmarks"]
fast-runtime = []
